--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <!-- Page Title -->
-    <title>Nikky Hwang</title>
+    <title>Portfolio</title>
 
 <!-- Metadata -->
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
 
 <body>
     
-    <h1>Nikky Hwang</h1>
+    <h1>Portfolio</h1>
 
     <nav>
         <ul>
@@ -41,7 +41,7 @@
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Plugins(s) -->
+    <!-- LightGallery Plugins(s) -->
     
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
