--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,9 +33,9 @@
 
     <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio/index.html">Portflio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/portfolio/index.html">Portflio</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
 
