--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,8 @@
     
     <h1>Contact</h1>
 
+
+
     <nav>
         <ul>
             <li><a href="about.html">About</a></li>
@@ -39,6 +41,15 @@
         </ul>
     </nav>
 
+    <form action="https://formspree.io/nikkyhwang06@gmail.com" method="POST">
+        <label for="name">Name</label>
+        <input type="text" name="name">
+
+        <label for="_replyto">Email</label>
+        <input type="email" name="_replyto">
+
+        <input type="submit" value="Send">
+      </form>
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
