--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
 </head>
 
 <body>
-    
-    <nav>
-        <ul>
-            <li><a href="/">Homeage</a></li>
+    <nav>  
+    <ul  id="navbar">
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/portfolio.html">Portolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </nav>
-
-    <h1>Homepage</h1>
+    </div>  
+    <h1>Welcome To My Page</h1>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
