--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <li><a href="/portfolio.html">Portolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </div>  
-    <h1>Welcome To My Page</h1>
+    </nav>  
+    
+    <h1 id="header" >Welcome To My Website</h1>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
