--- a/portfolio.html
+++ b/portfolio.html
@@ -31,15 +31,15 @@
 <body>
     
     <nav>
-        <ul>
-            <li><a href="/">Homeage</a></li>
+        <ul id="navbar">
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/portfolio.html">Portolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>    
 
-    <h1>Portfolio</h1>
+    <h1 id="header">Portfolio</h1>
 
 
     <div id="gallery-1">
