--- a/contact.html
+++ b/contact.html
@@ -30,15 +30,15 @@
 <body>
 
     <nav>
-        <ul>
-            <li><a href="/">Homeage</a></li>
+        <ul id="navbar">
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/portfolio.html">Portolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <h1>Contact</h1>
+    <h1 id="header">Contact</h1>
 
     <form action="https://formspree.io/pmanikoth@ewu.edu" method="POST">
        
