--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     
     <h1 id="header" >Welcome To My Website</h1>
 
+    <div id="enter">
+        <input type="button" value="Enter" onclick="https:"//nikkyhwang.github.io/portfolio.html">
+    </div>
+
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
