home page edits

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
 <!-- Required Plugin Stylesheets -->    
     <link rel="stylesheet" href="/css/lightgallery.min.css">
     <link rel="stylesheet" href="/css/lg-transitions.min.css">
+    <link rel="stylesheet" href="css/animate.css">
 <!-- My Awesome Styling -->
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -32,14 +33,13 @@
     
     <nav>
         <ul id="navbar">
-            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/portfolio.html">Portolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>    
 
-    <h1 id="header">Portfolio</h1>
+    <h1 id="portfolioHeader">Portfolio</h1>
 
 
     <div id="gallery-1">
