--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <!-- Normalize CSS via CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 <!-- Required Plugin Stylesheets -->    
-    
+<link rel="stylesheet" href="css/animate.css">
 <!-- My Awesome Styling -->
     <link rel="stylesheet" href="css/styles.css">
 
@@ -31,14 +31,13 @@
 
     <nav>
         <ul id="navbar">
-            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/portfolio.html">Portolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <h1 id="header">Contact</h1>
+    <h1 id="contactHeader">Contact</h1>
 
     <form action="https://formspree.io/pmanikoth@ewu.edu" method="POST">
        
