--- a/index.html
+++ b/index.html
@@ -21,25 +21,19 @@
 <!-- Normalize CSS via CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 <!-- Required Plugin Stylesheets -->    
-    
+    <link rel="stylesheet" href="css/animate.css">
 <!-- My Awesome Styling -->
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
-<body>
-    <nav>  
-    <ul  id="navbar">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/portfolio.html">Portolio</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-        </ul>
-    </nav>  
+<body id="home">
     
     <h1 id="header" >Welcome To My Website</h1>
 
-    <input type="button" value="Enter" onclick="window.location.href='https:nikkyhwang.github.io/portfolio.html'">
+   <div id="enterPortfolio">
+    <input  type="button" value="Enter" onclick="window.location.href='https:nikkyhwang.github.io/portfolio.html'">
+</div>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
