About page and Images

--- a/about.html
+++ b/about.html
@@ -37,7 +37,33 @@
         </ul>
     </nav>
 
-    <h1 id="aboutHeader">About Me</h1>
+    <h1 id="aboutHeader">A Little About Me</h1>
+    <h2>Hi, my name is Nikky Hwang...</h2>
+    <p>I was born and raised in Tacoma/Puyallup Washington and I am 23 years young. I'm a student who will be an EWU graduate in Spring 2019. Majoring 
+        in Visual Communication Design, a minor in 3D Animation, and a User Experience Design 
+        Certificate. 
+    </p>
+    <p>I am the youngest of three daughters of two amazing parents. Growing up, my parents never gave us the
+        thought of making a career out of "art". They were so determined to make sure we focused on "real" education 
+        and getting a job that was well paid. So throughout high school and the beginning of college, I tried 
+        different classes to figure out what I wanted to do but nothing sparked my attention. It wasn't until
+        the second year when my community college advisor (who was also the head of the graphic design program) encouraged
+        me to take one of his 3D animation courses. The next quarter, I started and let me tell you, I felt so intimidated
+        because I was basically the only one not in that program but fell in love with it instantly. 
+    </p>
+    <p>Fast forwarding to when I got accepted into EWU for a 3D Animation Major, I was ready to declare my major when I got there, 
+        but when I did, EWU told me that they did not offer the program anymore and only had a minor in it. My life was sort of 
+        crushed when my advisor told me. I had no idea what I wanted to do so I declared myself as a Computer Science major. I 
+        took one quarter of it and said no thank you. So I was just going to finish up the year with the minor and just move back home. I signed up
+        for a VCD class because I didn't care anymore and wanted to try it out. It wasn't animation, but I enjoyed it and then, I discovered
+        the UX Certificate and found out what it was and it was something I was definitely interested. UX/Web Design is something I can see
+        myself practicing and working hard to find a career in. 
+    </p>
+    <p>So, if you couldn't tell by my story, my experience with design and art only started a couple years ago. Yeah, I may not
+        have to best work, but I am only just starting and passionate and eager to learn more. My main focus and passion in 
+        the design field is User Experience and Web Design. Coding is something where I could sit infront of my computer for hours and 
+        figure out how to learn something new. 
+    </p>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
