--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1 id="header" >Welcome To My Website</h1>
 
    <div id="enterPortfolio">
-    <input  type="button" value="Enter" onclick="window.location.href='https:nikkyhwang.github.io/portfolio.html'">
+    <input class="enterPortfolio" type="button" value="Enter" onclick="window.location.href='https:nikkyhwang.github.io/portfolio.html'">
 </div>
 
     <!-- jQuery Library via CDN -->
