--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <h1 id="portfolioHeader">Portfolio</h1>
 
-
+<container id="portfolio">
     <div id="gallery">
 
         <a href="/img/photo3.JPG">
@@ -100,6 +100,8 @@
                         </a>
     
     </div>
+
+</container>
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
