--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <input class="enterPortfolio" type="button" value="Enter" onclick="window.location.href='https:nikkyhwang.github.io/portfolio.html'">
 </div>
 
+<div id="nikky">
+   I'm Nikky Hwang
+</div>
+
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
