--- a/about.html
+++ b/about.html
@@ -75,6 +75,10 @@
     </container>
     </div>
 
+    <footer>
+        <p>&copy; Copyright <span>YEAR</span></p>
+      </footer>
+      
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
@@ -82,4 +86,5 @@
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
