--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
             <img src="/img/photo3.JPG" width="20%" alt="">
         </a>
 
-        <a href="/img/photo4.jpg">
+        <a href="/img/photo4.JPG">
             <img src="/img/photo4.JPG" width="24%" alt="">
         </a>
 
@@ -100,8 +100,13 @@
                         </a>
     
     </div>
+    
 
 </container>
+
+<footer>
+    <p>&copy; Copyright <span>YEAR</span></p>
+  </footer>
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
@@ -109,4 +114,5 @@
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
