--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,10 @@
 
     </form>
 
+    <footer>
+        <p>&copy; Copyright <span>YEAR</span></p>
+      </footer>
+
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
@@ -71,4 +75,5 @@
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
